# grapes

./: .gitattributes  .gitignore  .goreleaser.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  SPEC.md  go.mod  go.sum  idea.md  main.go
.claude-plugin/: marketplace.json
.claude/skills/: grapes  grapes-close  grapes-comment  grapes-create  grapes-list  grapes-read  grapes-search  grapes-update
.github/workflows/: auto-tag.yml
.grapes/: config.toml
.grapes/1/: comments.md  content.md  meta.yaml
.grapes/10/: comments.md  content.md  meta.yaml
.grapes/11/: content.md  meta.toml  meta.yaml
.grapes/12/: content.md  meta.toml  meta.yaml
.grapes/13/: content.md  meta.toml  meta.yaml
.grapes/14/: content.md  meta.toml  meta.yaml
.grapes/15/: content.md  meta.toml  meta.yaml
.grapes/16/: content.md  meta.toml  meta.yaml
.grapes/17/: content.md  meta.toml  meta.yaml
.grapes/18/: content.md  meta.toml  meta.yaml
.grapes/19/: content.md  meta.toml  meta.yaml
.grapes/2/: comments.md  content.md  meta.yaml
.grapes/20/: content.md  meta.toml  meta.yaml
.grapes/21/: content.md  meta.toml  meta.yaml
.grapes/22/: comments.md  content.md  meta.toml  meta.yaml
.grapes/23/: comments.md  content.md  meta.toml
.grapes/24/: comments.md  content.md  meta.toml
.grapes/25/: comments.md  content.md  meta.toml
.grapes/26/: comments.md  content.md  meta.toml
.grapes/27/: comments.md  (+2 more)
old/: peas-usage.md
tui/: pyproject.toml
tui/src/grapes_tui/: __init__.py  __main__.py  app.py  data.py
tui/src/grapes_tui/screens/: board.py  detail.py  list.py
(+168 files in other folders)
