[project]
name = "grapes-tui"
version = "0.1.0"
description = "TUI for Grapes file-based issue tracker"
readme = "README.md"
authors = [
    { name = "Mike Boss", email = "mboss@ethz.ch" }
]
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0.3",
    "textual>=8.0.0",
]

[project.scripts]
grapes-tui = "grapes_tui.app:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
